UtahLiveDataTest/src/objects/r_fund__c.object
<CustomObject>
    <description>This is created for the program coding block in USBE</description>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>FUND_CD+FY</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>26</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FUND_CD__c</fullName>
        <label>Fund Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUND_NM__c</fullName>
        <label>FUND NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>FiscalYear__r.FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fund</label>
    <nameField>
        <label>FUND CODE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>